# src/routes/v1/transactionRoutes.js
@@ -1,28 +1,13 @@
 const express = require('express')
-const routes = express.Router()
+const multer = require('multer')
+const transactionsController = require('../../controllers/transactionController')
 
-routes.get('/finance/:userID', (req, res)=>{
-    console.log(req.params.userID)
-    res.status(200).json({ message: "sucesso" })
-})
-routes.delete('/finance/:userID/:financialID', (req, res)=>{
-    console.log(req.params.userID)
-    console.log(req.params.financialID)
-    res.status(200).json({ message: "sucesso" })
-})
-routes.post('/finance/:userID', (req, res)=>{
-    console.log(req.body)
-    res.status(200).json({ message: "sucesso" })
-})
-module.exports = routes
-// {
-//     "id": "",
-//         "userId": "",
-//             "financialData": [{
-//                 "id": "",
-//                 "price": "",
-//                 "typesOfExpenses": "",
-//                 "date": "",
-//                 "name": ""
-//             }]
-// }
+const transactionsRoutes = express.Router()
+const upload = multer()
+
+transactionsRoutes.get('/transactions/:userID', transactionsController.show)
+transactionsRoutes.delete('/transactions/:userID/:financialID',  transactionsController.deleteTransaction)
+transactionsRoutes.post('/transactions/:userID', transactionsController.store)
+transactionsRoutes.post('/transactions/import/:userID', upload.single('file'), transactionsController.importTransactions)
+
+module.exports = transactionsRoutes
